--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,9 @@ env:
     - OCTAVE=octave
  matrix:
     - WITH_COVERAGE=
-    - WITH_COVERAGE=true
-    - RUN_DOC_TEST=true
+    # Disable until ready to go there:
+    #- WITH_COVERAGE=true
+    #- RUN_DOC_TEST=true
 before_install:
     # to prevent IPv6 being used for APT
     - sudo bash -c "echo 'Acquire::ForceIPv4 \"true\";' > /etc/apt/apt.conf.d/99force-ipv4"
