testing with tutorial FCS files

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,9 @@ before_install:
     - rm -rf MOdox
     - travis_retry git clone -v git://github.com/MOdox/MOdox.git
     - make -C MOdox install
+    # retrieve Tutorial for running tests
+    - rm -rf TASBEFlowAnalytics-Tutorial
+    - git clone https://github.com/TASBE/TASBEFlowAnalytics-Tutorial
     # go back to original directory
     - cd TASBEFlowAnalytics
 
