--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ before_install:
     - travis_retry sudo apt-get -y -qq update
     # get Octave 4,0
     - travis_retry sudo apt-get -y -qq install octave liboctave-dev
+    # install Octave io package
+    - octave --no-gui --quiet --eval "pkg install -forge io"
     # install MOxUnit
     - cd ..
     - rm -rf MOxUnit
